finish navigation section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!--Styles-->
   <link rel="stylesheet" href="fonts/fonts.min.css">
   <link rel="stylesheet" href="css/vendors/animate.css">
+  <link rel="stylesheet" href="css/vendors/jquery.fatNav.min.css">
   <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   
@@ -17,6 +18,18 @@
   <title>Tien Nguyen | Full Stack Developer</title>
 </head>
 <body>
+  <!--Navigation-->
+  <nav class="navigation fat-nav">
+    <div class="fat-nav__wrapper">
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#work-experience">Work Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#references">References</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
   <!--Header-->
   <header id="header" class="header">
     <div class="header__video-container">
@@ -43,6 +56,7 @@
 
   <!--Scripts-->
   <script src="js/vendors/jquery-3.2.1.min.js"></script>
+  <script src="js/vendors/jquery.fatNav.min.js"></script>
   <script src="js/vendors/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
