finish skills section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/vendors/animate.css">
   <link rel="stylesheet" href="css/vendors/jquery.fatNav.min.css">
   <link rel="stylesheet" href="css/vendors/cntl.min.css">
+  <link rel="stylesheet" href="css/vendors/jquery.lineProgressbar.min.css">
   <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   
@@ -109,7 +110,7 @@
     <!--Work Experience & Education-->
     <section id="work-experience" class="work section-box">
       <div class="container">
-        <h2 class="heading-secondary mb-5">Work Experience & Education</h2>
+        <h2 class="heading-secondary mb-5 wow fadeInDown">Work Experience & Education</h2>
         <div class="timeline cntl">
           <span class="cntl-bar cntl-center">
             <span class="cntl-bar-fill"></span>
@@ -242,12 +243,22 @@
           </div>
       </div>
     </section>
+    
+    <!--Skills & Knowledge-->
+    <section id="skills" class="skills section-box">
+      <div class="container">
+        <h2 class="heading-secondary mb-4 wow fadeInDown">Skills & Knowledge</h2>
+        <div class="row skills__wrapper wow fadeInUp">
+        </div>
+      </div>
+    </section>
   </main>
   <!--Scripts-->
   <script src="js/vendors/jquery-3.2.1.min.js"></script>
   <script src="js/vendors/jquery.fatNav.min.js"></script>
   <script src="js/vendors/wow.min.js"></script>
   <script src="js/vendors/jquery.cntl.min.js"></script>
+  <script src="js/vendors/jquery.lineProgressbar.js"></script>
   <script src="js/vendors/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
