add tag cloud for skills section

--- a/index.html
+++ b/index.html
@@ -247,9 +247,11 @@
     <!--Skills & Knowledge-->
     <section id="skills" class="skills section-box">
       <div class="container">
-        <h2 class="heading-secondary mb-4 wow fadeInDown">Skills & Knowledge</h2>
-        <div class="row skills__wrapper wow fadeInUp">
+        <h2 class="heading-secondary wow fadeInDown">Skills & Knowledge</h2>
+        <div id="tag-cloud" class="skills__tag-cloud m-auto">
+          <ul></ul>
         </div>
+        <div class="row skills__wrapper wow fadeInUp"></div>
       </div>
     </section>
   </main>
@@ -259,6 +261,7 @@
   <script src="js/vendors/wow.min.js"></script>
   <script src="js/vendors/jquery.cntl.min.js"></script>
   <script src="js/vendors/jquery.lineProgressbar.js"></script>
+  <script src="js/vendors/tagcloud.jquery.min.js"></script>
   <script src="js/vendors/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
