add icon for tag cloud

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="css/vendors/jquery.fatNav.min.css">
   <link rel="stylesheet" href="css/vendors/cntl.min.css">
   <link rel="stylesheet" href="css/vendors/jquery.lineProgressbar.min.css">
+  <link rel="stylesheet" href="css/vendors/jquery.lineProgressbar.min.css">
+  <link rel="stylesheet" href="css/vendors/devicon.min.css">
   <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   
