finish certificates section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,49 @@
         <div class="row skills__wrapper wow fadeInUp"></div>
       </div>
     </section>
+    
+    <!--Certificates & Languages-->
+    <section id="certificates" class="certificates section-box">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2 class="heading-secondary mb-4 wow fadeInDown">Certificates</h2>
+            <div class="certificates__list">
+                <div class="certificates__list-item mb-4">
+                  <div class="certificates__icon-wrapper wow fadeInLeft">
+                    <i class="icon ion-ribbon-b icon--big"></i>
+                  </div>
+                  <div class="certificates__content-box ml-4 wow fadeInRight">
+                    <h6><a href="pdf/GraphQL_Udemy_Certificate.pdf" target="_blank">MongoDB for NodeJS Developer</a></h6>
+                    <p>MongoDB University</p>
+                  </div>
+                </div>
+                <div class="certificates__list-item mb-4">
+                  <div class="certificates__icon-wrapper wow fadeInLeft">
+                    <i class="icon ion-ribbon-b icon--big"></i>
+                  </div>
+                  <div class="certificates__content-box ml-4 wow fadeInRight">
+                    <h6><a href="pdf/GraphQL_Udemy_Certificate.pdf" target="_blank">GraphQL with React</a></h6>
+                    <p>Udemy</p>
+                  </div>
+                </div>
+                <div class="certificates__list-item mb-4">
+                  <div class="certificates__icon-wrapper wow fadeInLeft">
+                    <i class="icon ion-ribbon-b icon--big"></i>
+                  </div>
+                  <div class="certificates__content-box ml-4 wow fadeInRight">
+                    <h6><a href="pdf/GraphQL_Udemy_Certificate.pdf" target="_blank">Webpack</a></h6>
+                    <p>Udemy</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <h2 class="heading-secondary mb-4 wow fadeInDown">Languages</h2>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <!--Scripts-->
   <script src="js/vendors/jquery-3.2.1.min.js"></script>
