change default font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
   <!--Styles-->
-  <link rel="stylesheet" href="fonts/fonts.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/vendors/ionicons.min.css">
   <link rel="stylesheet" href="css/vendors/animate.css">
   <link rel="stylesheet" href="css/vendors/jquery.fatNav.min.css">
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/style.css">
   
   <!--Title-->
-  <title>Tien Nguyen | Full Stack Developer</title>
+  <title>Tien Nguyen | Full Stack Developer & Freelancer</title>
 </head>
 <body>
   <!--Navigation-->
@@ -269,7 +269,7 @@
                     <i class="icon ion-ribbon-b icon--big"></i>
                   </div>
                   <div class="certificates__content-box ml-4 wow fadeInRight">
-                    <h6><a href="pdf/GraphQL_Udemy_Certificate.pdf" target="_blank">MongoDB for NodeJS Developer</a></h6>
+                    <h6><a href="pdf/MongoDB-Certificate.pdf" target="_blank">MongoDB for NodeJS Developer</a></h6>
                     <p>MongoDB University</p>
                   </div>
                 </div>
@@ -287,7 +287,7 @@
                     <i class="icon ion-ribbon-b icon--big"></i>
                   </div>
                   <div class="certificates__content-box ml-4 wow fadeInRight">
-                    <h6><a href="pdf/GraphQL_Udemy_Certificate.pdf" target="_blank">Webpack</a></h6>
+                    <h6><a href="pdf/Webpack_Udemy_Certificate.pdf" target="_blank">Webpack</a></h6>
                     <p>Udemy</p>
                   </div>
                 </div>
