modify font & color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
   <!--Styles-->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="css/vendors/ionicons.min.css">
   <link rel="stylesheet" href="css/vendors/animate.css">
   <link rel="stylesheet" href="css/vendors/jquery.fatNav.min.css">
@@ -47,7 +47,10 @@
     </div>
     <div class="header__content-box">
       <div class="header__content-box__inner text-center">
-        <h1 class="heading-primary mb-4 wow fadeInDown">Hi. I'm Tien,<br>A Full Stack Developer</h1>
+        <h1 class="heading-primary mb-4 wow fadeInDown">
+          <span class="heading-primary--main">Hi, I'm Tien</span><br>
+          <span class="heading-primary--sub">Full Stack Developer & Freelancer</span>
+        </h1>
         <div class="header__description mb-4 wow fadeInLeft">
           <p>I specialize in front-end (HTML, CSS, Javascript, React), back-end (Node.JS, Express.JS) and also database (NoSQL, MongoDB). I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction.</p>
         </div>
