finish language section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center mb-5">
-            <h2 class="heading-secondary mb-2 wow fadeInDown">Skills & Expertise</h2>
+            <h2 class="heading-secondary mb-3 wow fadeInDown">Skills & Expertise</h2>
             <p class="heading-fourth mb-5 wow fadeInUp">Full Stack Developer</p>
             <div class="expertise__img-wrapper wow fadeInLeft">
               <div class="expertise__img-border"></div>
@@ -80,31 +80,31 @@
             <div class="row">
               <div class="col-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
-                  <i class="ion-ios-lightbulb-outline icon icon--medium expertise__icon"></i>
+                  <i class="ion-social-chrome-outline icon icon--medium expertise__icon"></i>
                 </div>
-                <h3 class="heading-fourth">Branding</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, provident.</p>
+                <h3 class="heading-fourth">Web Development</h3>
+                <p>Create beautiful, fast, secure web applications tailored exclusively for your business goals. Cover backend and frontend using top and most innovative tech stacks.</p>
               </div>
               <div class="col-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
-                  <i class="ion-ios-monitor-outline icon icon--medium expertise__icon"></i>
+                  <i class="ion-iphone icon icon--medium expertise__icon"></i>
                 </div>
-                <h3 class="heading-fourth">Marketing</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, provident.</p>
+                <h3 class="heading-fourth">Mobile Development</h3>
+                <p>Build native apps for iOS and Android devices using React Native, translating your ideas into apps your customers can enjoy.</p>
               </div>
               <div class="col-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
-                  <i class="ion-paintbrush icon icon--medium expertise__icon"></i>
+                  <i class="ion-monitor icon icon--medium expertise__icon"></i>
                 </div>
-                <h3 class="heading-fourth">Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, provident.</p>
+                <h3 class="heading-fourth">Desktop Development</h3>
+                <p>Build cross platform desktop app quickly using ElectronJS</p>
               </div>
               <div class="col-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
-                  <i class="ion-code icon icon--medium expertise__icon"></i>
+                  <i class="ion-wand icon icon--medium expertise__icon"></i>
                 </div>
-                <h3 class="heading-fourth">Programming</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, provident.</p>
+                <h3 class="heading-fourth">Product Design</h3>
+                <p>Solve real human problems and provide ultimate UX for your web and mobile applications.</p>
               </div>
             </div>
           </div>
@@ -134,24 +134,24 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Web Development</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Mobile App Development</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">CI/CD</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Testing</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Pair Programming</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Agile</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Scrum</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Git</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Web Development</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Mobile App Development</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">CI/CD</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Testing</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Pair Programming</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Agile</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Scrum</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Git</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Trello</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Jira</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Confluence</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Slack</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Skype</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Webstorm</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Atom</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Trello</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Jira</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Confluence</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Slack</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Skype</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Webstorm</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Atom</span>
                 </p>
               </div>
               <div class="cntl-image"><h4 class="heading-fourth">June 2017 - Present</h4></div>
@@ -169,15 +169,15 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Software Development</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Desktop App Development</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Web Development</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Software Development</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Desktop App Development</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Web Development</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Webstorm</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Windows</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Postman</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Webstorm</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Windows</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Postman</span>
                 </p>
               </div>
               <div class="cntl-image"><h4 class="heading-fourth">October 2016 - May 2017</h4></div>
@@ -192,21 +192,21 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Node.js</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Express.js</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">MongoDB</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">HTML</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">CSS</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Javascript</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Bootstrap</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">React.js</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Angular.js</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Node.js</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Express.js</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">MongoDB</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">HTML</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">CSS</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Javascript</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Bootstrap</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">React.js</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Angular.js</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Webstorm</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Sublime Text</span>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Bracket</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Webstorm</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Sublime Text</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Bracket</span>
                 </p>
               </div>
               <div class="cntl-image"><h4 class="heading-fourth">June 2016 - October 2016</h4></div>
@@ -221,13 +221,13 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">iOS Development</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Objective C</span>
-                  <span class="btn btn--small btn--orange mb-2 mr-2">Swift</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">iOS Development</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Objective C</span>
+                  <span class="btn btn--small btn--orange mb-3 mr-2">Swift</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
-                  <span class="btn btn--small btn--blue mb-2 mr-2">Xcode</span>
+                  <span class="btn btn--small btn--blue mb-3 mr-2">Xcode</span>
                 </p>
               </div>
               <div class="cntl-image"><h4 class="heading-fourth">October 2015 - June 2016</h4></div>
@@ -298,6 +298,30 @@
           </div>
           <div class="col-md-6">
             <h2 class="heading-secondary mb-4 wow fadeInDown">Languages</h2>
+            <div class="row wow fadeIn">
+              <div class="col-md-3 col-6 mr-5">
+                <div class="circle-progress blue">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                  <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                  <div class="progress-value">Vietnamese</div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="circle-progress orange">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                  <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                  <div class="progress-value">English</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
