add my latest work section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/vendors/jquery.lineProgressbar.min.css">
   <link rel="stylesheet" href="css/vendors/jquery.lineProgressbar.min.css">
   <link rel="stylesheet" href="css/vendors/devicon.min.css">
+  <link rel="stylesheet" href="css/vendors/swiper.min.css">
   <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   
@@ -326,6 +327,91 @@
         </div>
       </div>
     </section>
+    
+    <!--Projects-->
+    <section id="projects" class="projects section-box">
+      <div class="container">
+        <h2 class="heading-secondary mb-5">My Latest Work</h2>
+        <div class="row mt-3">
+          <div class="col-12">
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-sm-6">
+                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
+                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-sm-6">
+                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
+                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-sm-6">
+                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
+                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-sm-6">
+                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
+                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-sm-6">
+                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
+                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-sm-6">
+                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
+                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Add Pagination -->
+              <div class="swiper-pagination"></div>
+              <!-- Add Arrows -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+            </div>
+          </div>
+      </div>
+    </section>
   </main>
   <!--Scripts-->
   <script src="js/vendors/jquery-3.2.1.min.js"></script>
@@ -334,6 +420,7 @@
   <script src="js/vendors/jquery.cntl.min.js"></script>
   <script src="js/vendors/jquery.lineProgressbar.js"></script>
   <script src="js/vendors/tagcloud.jquery.min.js"></script>
+  <script src="js/vendors/swiper.min.js"></script>
   <script src="js/vendors/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
