finish testimonials section

--- a/index.html
+++ b/index.html
@@ -79,28 +79,28 @@
           </div>
           <div class="col-md-6 wow fadeInRight">
             <div class="row">
-              <div class="col-6 mb-5">
+              <div class="col-md-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
                   <i class="ion-social-chrome-outline icon icon--medium expertise__icon"></i>
                 </div>
                 <h3 class="heading-fourth">Web Development</h3>
                 <p>Create beautiful, fast, secure web applications tailored exclusively for your business goals. Cover backend and frontend using top and most innovative tech stacks.</p>
               </div>
-              <div class="col-6 mb-5">
+              <div class="col-md-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
                   <i class="ion-iphone icon icon--medium expertise__icon"></i>
                 </div>
                 <h3 class="heading-fourth">Mobile Development</h3>
                 <p>Build native apps for iOS and Android devices using React Native, translating your ideas into apps your customers can enjoy.</p>
               </div>
-              <div class="col-6 mb-5">
+              <div class="col-md-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
                   <i class="ion-monitor icon icon--medium expertise__icon"></i>
                 </div>
                 <h3 class="heading-fourth">Desktop Development</h3>
                 <p>Build cross platform desktop app quickly using ElectronJS</p>
               </div>
-              <div class="col-6 mb-5">
+              <div class="col-md-6 mb-5">
                 <div class="expertise__icon-wrapper text-center mb-4">
                   <i class="ion-wand icon icon--medium expertise__icon"></i>
                 </div>
@@ -331,7 +331,7 @@
     <!--Projects-->
     <section id="projects" class="projects section-box">
       <div class="container">
-        <h2 class="heading-secondary mb-5">My Latest Work</h2>
+        <h2 class="heading-secondary mb-5 wow fadeInDown">My Latest Work</h2>
         <div class="row mt-3">
           <div class="col-12">
             <div class="swiper-container">
@@ -410,6 +410,33 @@
               <div class="swiper-button-prev"></div>
             </div>
           </div>
+      </div>
+    </section>
+    
+    <!--Testimonials-->
+    <section id="references" class="references section-box">
+      <div class="container">
+        <h2 class="heading-secondary text-center mb-5 wow fadeInDown">What Clients Say About Me</h2>
+        <div class="row wow fadeInUp">
+          <div class="col-md-4 col-12">
+            <blockquote class="references__quote">
+              Working with Tien was better than expected and we had really high expectations. He is an incredibly talented developer but what really makes him stand out is his work ethic and steady approach. Time after time, he added enhancements and improvements that resulted in a better end product for us and our clients.
+              <cite><img class="rounded-circle" src="images/clients/customer-1.jpg" alt="Client 1">Alberto Duncan</cite>
+            </blockquote>
+          </div>
+          <div class="col-md-4 col-12">
+            <blockquote class="references__quote">
+              We have the fortune of working with Tien on a very regular basis. Every single project is done in a timely fashion and is delivered exactly as is outlined. Beyond that, his development skills and expertise make him an invaluable part of our process. We absolutely offer our highest possible recommendation.
+              <cite><img class="rounded-circle" src="images/clients/customer-2.jpg" alt="Client 2">Joana Silva</cite>
+            </blockquote>
+          </div>
+          <div class="col-md-4 col-12">
+            <blockquote class="references__quote">
+              Tien has done a fantastic job overall. Not only the site is to design, the code is very clean and slick. Love the way he achieved the translations portion of the site.
+              <cite><img class="rounded-circle" src="images/clients/customer-3.jpg" alt="Client 3">Milton Chapman</cite>
+            </blockquote>
+          </div>
+        </div>
       </div>
     </section>
   </main>
